# wgpu-study

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: lib.rs  lib.sync-conflict-20250831-232149-I24OZUD.rs  model.rs  resources.rs  shader.wgsl  texture.rs
