cargo-features = ["edition2024"]

[package]
name = "wgpu-study"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
